--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -20,6 +20,15 @@
     </init-param>
   </servlet>
   
+   <servlet>
+    <servlet-name>RandomLayoutStress</servlet-name>
+    <servlet-class>com.itmill.toolkit.terminal.gwt.server.ApplicationServlet</servlet-class>
+    <init-param>
+      <param-name>application</param-name>
+      <param-value>com.itmill.toolkit.tests.RandomLayoutStress</param-value>
+    </init-param>
+  </servlet>
+  
   <servlet>
     <servlet-name>Reservr</servlet-name>
     <servlet-class>com.itmill.toolkit.terminal.gwt.server.ApplicationServlet</servlet-class>
@@ -223,6 +232,11 @@
       <param-value>com.itmill.toolkit.demo.colorpicker.gwt.WidgetSet</param-value>
     </init-param>
   </servlet>
+  
+     <servlet-mapping>
+    <servlet-name>RandomLayoutStress</servlet-name>
+    <url-pattern>/RandomLayoutStress/*</url-pattern>
+  </servlet-mapping>
   
    <servlet-mapping>
     <servlet-name>TestBench</servlet-name>
