Removed old Feature Browser from demo package, simpler but better functioning demo will be added soon.
svn changeset:2549 branch:trunk

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -101,7 +101,7 @@
     <servlet-class>com.itmill.toolkit.terminal.gwt.server.ApplicationServlet</servlet-class>
     <init-param>
       <param-name>application</param-name>
-      <param-value>com.itmill.toolkit.demo.features.FeaturesApplication</param-value>
+      <param-value>com.itmill.toolkit.tests.featurebrowser.FeaturesApplication</param-value>
     </init-param>
   </servlet>
 
