--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -11,7 +11,16 @@
      IT Mill Toolkit examples
   </description>
 
-
+<servlet>
+    <servlet-name>iWork</servlet-name>
+    <servlet-class>com.itmill.toolkit.terminal.gwt.server.ApplicationServlet</servlet-class>
+    <init-param>
+      <param-name>application</param-name>
+      <param-value>com.itmill.iwork.IWork</param-value>
+    </init-param>
+  </servlet>
+  
+  
 <servlet>
     <servlet-name>TestSplitPanel</servlet-name>
     <servlet-class>com.itmill.toolkit.terminal.gwt.server.ApplicationServlet</servlet-class>
@@ -256,6 +265,11 @@
     </init-param>
   </servlet>
   
+  
+       <servlet-mapping>
+    <servlet-name>iWork</servlet-name>
+    <url-pattern>/iWork/*</url-pattern>
+  </servlet-mapping>
   
      <servlet-mapping>
     <servlet-name>TestSplitPanel</servlet-name>
