Added CachingDemo; a small client-side caching demo.
svn changeset:2661 branch:trunk

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -264,6 +264,15 @@
       <param-value>com.itmill.toolkit.demo.colorpicker.gwt.WidgetSet</param-value>
     </init-param>
   </servlet>
+ 
+   <servlet>
+    <servlet-name>CachingDemo</servlet-name>
+    <servlet-class>com.itmill.toolkit.terminal.gwt.server.ApplicationServlet</servlet-class>
+    <init-param>
+      <param-name>application</param-name>
+      <param-value>com.itmill.toolkit.demo.CachingDemo</param-value>
+    </init-param>
+  </servlet>
   
   
        <servlet-mapping>
@@ -389,6 +398,11 @@
   <servlet-mapping>
     <servlet-name>ColorPickerApplication</servlet-name>
     <url-pattern>/colorpicker/*</url-pattern>
+  </servlet-mapping>
+
+  <servlet-mapping>
+    <servlet-name>CachingDemo</servlet-name>
+    <url-pattern>/CachingDemo/*</url-pattern>
   </servlet-mapping>
 
   <welcome-file-list>
