--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -89,7 +89,7 @@
     </init-param>
     <init-param>
       <param-name>widgetset</param-name>
-      <param-value>com.itmill.toolkit.demo.reservation.gwt.WidgetSet</param-value>
+      <param-value>com.itmill.toolkit.demo.reservation.gwt.ReservationWidgetSet</param-value>
     </init-param>
   </servlet>
   
@@ -102,7 +102,7 @@
     </init-param>
     <init-param>
       <param-name>widgetset</param-name>
-      <param-value>com.itmill.toolkit.demo.reservation.gwt.WidgetSet</param-value>
+      <param-value>com.itmill.toolkit.demo.reservation.gwt.ReservationWidgetSet</param-value>
     </init-param>
   </servlet>
   
@@ -284,7 +284,7 @@
     </init-param>
     <init-param>
       <param-name>widgetset</param-name>
-      <param-value>com.itmill.toolkit.demo.colorpicker.gwt.WidgetSet</param-value>
+      <param-value>com.itmill.toolkit.demo.colorpicker.gwt.ColorPickerWidgetSet</param-value>
     </init-param>
   </servlet>
  
