Added personal testbench.
svn changeset:2742 branch:trunk

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -305,6 +305,15 @@
       <param-value>com.itmill.toolkit.demo.NotificationDemo</param-value>
     </init-param>
   </servlet>
+
+  <servlet>
+    <servlet-name>MagiTestServlet</servlet-name>
+    <servlet-class>com.itmill.toolkit.terminal.gwt.server.ApplicationServlet</servlet-class>
+    <init-param>
+      <param-name>application</param-name>
+      <param-value>com.itmill.toolkit.tests.magi.MagiTestApplication</param-value>
+    </init-param>
+  </servlet>
   
   
         <servlet-mapping>
@@ -446,6 +455,11 @@
   <servlet-mapping>
     <servlet-name>NotificationDemo</servlet-name>
     <url-pattern>/NotificationDemo/*</url-pattern>
+  </servlet-mapping>
+
+  <servlet-mapping>
+    <servlet-name>MagiTestServlet</servlet-name>
+    <url-pattern>/testbench2/*</url-pattern>
   </servlet-mapping>
 
   <welcome-file-list>
